# jarvis

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py
src/jarvis/: cli.py
src/jarvis/agents/: multimodal.py  text.py  web.py
src/jarvis/data/: loader.py  schemas.py
src/jarvis/evaluation/: runner.py  scorer.py  submission.py
src/jarvis/graph/: orchestrator.py  router.py  state.py
src/jarvis/tools/: code_exec.py  file_loaders.py  multimodal.py  search.py  web_fetch.py
src/jarvis/utils/: answer_extract.py  normalize.py
tests/: test_router.py  test_scorer.py  test_tools.py
